Fix overflow wrap.

--- a/markdown-renderer/src/renderer/richtext.css
+++ b/markdown-renderer/src/renderer/richtext.css
@@ -1,8 +1,8 @@
-/* .rich-text-content {
-  text-align: justify;
-  text-wrap: pretty;
+.rich-text-content {
+  /* text-align: justify;
+  text-wrap: pretty; */
   overflow-wrap: break-word;
-} */
+}
 
 .rich-text-content a {
   color: #3A71F2;
